# ds-store-killer

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: cache.rs  cli.rs  consts.rs  git.rs  killer.rs  log.rs  main.rs  service.rs  watcher.rs
